# AeroDoc

./: .gitignore  .gitignore copy  .pre-commit-config.yaml  QUICKSTART.md  README copy.md  examples.py  ingest_runner.py  pyproject.toml  start_backend.bat  start_frontend.bat  ДИАГНОСТИКА.md  ДИАГНОСТИКА_500.md  ЗАПУСК.md  ИСПРАВЛЕНИЕ_ОШИБКИ_500.md  УСТАНОВКА_ЗАВИСИМОСТЕЙ.md
.github/workflows/: lint.github-ci.yml
backend/: aerodoc.db  auth.py  config.py  database.py  debug_register.py  init_db.py  install_dependencies.bat  install_simple.bat  main.py  models.py  requirements.txt  requirements_simple.txt  schemas.py  test_db.py
backend/documents/: 1_20251216_123715_пустой.txt
documents/: .gitkeep
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Auth.css  ChatInterface.css  ChatInterface.jsx  Login.jsx  Register.jsx
frontend/src/services/: api.js
src/rag/: app.py  config.py  dw.py  generator.py  ingest.py  logger.py  models.py  retriever.py  settings.py  splitter.py  test.md  utils.py  worker.py
