[project]
name = "aerodoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-huggingface>=0.0.3",
    "accelerate>=0.20.0",
    "pypdf>=4.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "markitdown[pdf]>=0.1.4",
    "chromadb>=1.3.7",
    "ollama>=0.6.1",
    "langchain-ollama>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "bandit>=1.7.0",
]
eval = [
    "bert-score>=0.3.0",
    "nltk>=3.8.0",
    "rouge-score>=0.1.2",
]

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
strict = false
check_untyped_defs = true
